Links de referencia adicionados e template formatado

--- a/document.tex
+++ b/document.tex
@@ -15,7 +15,7 @@
 \usepackage{multirow}
 \usepackage[nottoc]{tocbibind}
 
-% Espaçamento duplo. 
+% Espaçamento duplo.
 \usepackage{setspace}
  % Breaklines nas citações.
 \usepackage{cite}
@@ -54,7 +54,7 @@
 \onehalfspacing
 
 \begin{titlepage}
-\begin{center}	
+\begin{center}
 
 % Topo 1.
 \textsc{\Large UNIVERSIDADE FEDERAL DE ITAJUBÁ\\
@@ -66,19 +66,19 @@
 % Título.
 \textsc{\Large Seminário}\\
 \HRule \\[0.4cm]
-{\Large \bfseries Título da Monografia}
+{\Large \bfseries Arquitetura Peer to Peer}
 \HRule \\[0.4cm]
-\textsc{Disciplina X}\\[2.8cm]
+\textsc{REDES DE COMPUTADORES}\\[2.8cm]
 
 % Etc.
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Alunos:}\\[0.43cm]
 %\hRule\\
-Aluno 1\\
-Aluno 2\\
-Aluno 3\\
-Aluno 4\\
+David Mateus Batista\\
+Gabriel Erzinger Dousseau\\
+Gabriel Alves Taets\\
+Mauricio Leite\\
 \end{flushleft}
 \end{minipage}
 \begin{minipage}{0.4\textwidth}
@@ -92,73 +92,39 @@ Bruno Guazzelli Batista
 \vfill
 
 \today
-	
+
 \end{center}
 \end{titlepage}
 
 \thispagestyle{empty}
 
 \section*{Resumo}
-Inserir resumo
-
+Esta monografia tem o objetivo de estudar e analisar a arquitetura de redes Peer-to-peer,
+suas vantagens, desvantagens, limitações e aplicações.
 \newpage
 \pagenumbering{Roman}
+
 \tableofcontents
 \newpage
 \pagenumbering{arabic}
 
-\section{Exemplo Figura}
+%http://www.fio.edu.br/manualtcc/co/1_Estrutura_do_TCC.html%
+\section{Introdução}
+\newpage
 
+\section{Fundamentação Teórica}
+\newpage
 
+\section{Discussão}
+\newpage
 
-\begin{figure}[!htb]
-\centering
-\includegraphics[width=\linewidth]{img//ilustracaoiot.png}
-\caption{Internet das Coisas \cite{gubbi2013internet} \label{figure1}}
-\end{figure}
-
-
-
-\subsection{Exemplo Tabela}
-
-As principais atividades previstas para o desenvolvimento do projeto são descritas a seguir. A Tabela~\ref{tab-crono} ilustra a organização desses itens durante o tempo de projeto.
-
-\begin{table}[ht]
-\center
-\caption{Organização das atividades} \label{tab-crono}
-\bf
-\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
-\hline 
-\multirow{3}{*}{Fases} & \multicolumn{6}{|c|}{Período (por bimestres)} \\ 
-\cline{2-7}
- & \multicolumn{6}{|c|}{{\scriptsize 2017}} \\ 
-\cline{2-7}
- & {\scriptsize 1} & {\scriptsize 2} & {\scriptsize 3} & {\scriptsize 4} & {\scriptsize 5} & {\scriptsize 6} \\ 
-\hline 
-1 & \ck & \ck & \ck & \ck & \ck & \ck \\ 
-\hline 
-2 &     &     & \ck & \ck & \ck &  \\ 
-\hline 
-3 &     &     & \ck & \ck & \ck &  \\ 
-\hline 
-4 &     &     &     & \ck & \ck & \ck\\ 
-\hline 
-\end{tabular}
-\end{table}
-
-\begin{enumerate}
-
-	\item {\bf Análise crítica dos trabalhos relacionados:} estudo de mecanismos de controle de acesso disponíveis na literatura. Deve ocorrer durante todo o desenvolvimento do projeto, uma vez que novas soluções são propostas todos os dias;
-	\item {\bf Implementação dos algoritmos:} implementação dos algoritmos de controle de acesso e análise da viabilidade de proposta de uma nova metodologia;
-	\item {\bf Testes, coleta e análise de resultados:} realização de testes e avaliações de desempenho a fim de extrair resultados do comportamento do ambiente analisado;
-	\item {\bf Elaboração de artigos científicos:} Preparação de artigos que promovam a divulgação dos resultados alcançados e a apresentação das contribuições científicas.
-
-\end{enumerate}
+\section{Considerações finais}
+\newpage
 
 %*********************************************************************************************
-
-%\newpage
+\newpage
 \bibliographystyle{apalike}
 \bibliography{bibliography}
 
 \end{document}
+
