--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2807,6 +2807,13 @@ school={Monografia apresentada como requisito parcial para obtenção do grau de
   organization={IEEE}
 }
 
+@article{camarillop2parch,
+  title={Peer-to-Peer (P2P) Architecture: Definition, Taxonomies, Examples, and Applicability},
+  author={Camarillo, Gonzalo},
+  year={2009},
+  publisher={Internet Architecture Board}
+}
+
 @inproceedings{jin2014iot,
   title={IoT service selection based on physical service model and absolute dominance relationship},
   author={Jin, Xiongnan and Chun, Sejin and Jung, Jooik and Lee, Kyong-Ho},
@@ -2824,3 +2831,25 @@ school={Monografia apresentada como requisito parcial para obtenção do grau de
   year={2016},
   organization={IEEE}
 }
+
+@Article{Zhang2012,
+author="Zhang, GuoQiang
+and Tang, MingDong
+and Cheng, SuQi
+and Zhang, GuoQing
+and Song, HaiBin
+and Cao, JiGuang
+and Yang, Jing",
+title="P2P traffic optimization",
+journal="Science China Information Sciences",
+year="2012",
+volume="55",
+number="7",
+pages="1475--1492",
+abstract="Peer-to-peer (P2P) based content distribution systems have emerged as the main form for content distribution on the Internet, which can greatly reduce the distribution cost of content providers and improve the overall system scalability. However, the mismatch between the overlay and underlay networks causes large volume of redundant traffic, which intensifies the tension between P2P content providers and ISPs. Therefore, how to efficiently use network resources to reduce the traffic burden on the ISPs is crucial for the sustainable development of P2P systems. This paper surveys the state-of-art P2P traffic optimization technologies from three perspectives: P2P cache, locality-awareness and data scheduling. Technological details, comparison between these technologies and their applicabilities are presented, followed by a discussion of the issues that remain to be addressed and the direction of future content distribution research.",
+issn="1869-1919",
+doi="10.1007/s11432-011-4464-8",
+url="http://dx.doi.org/10.1007/s11432-011-4464-8"
+}
+
+
