fonte nas img do taets

--- a/document.tex
+++ b/document.tex
@@ -129,21 +129,21 @@ Prover um serviço geralmente envolve processamento ou armazenamento de dados. D
 \begin{figure}[!ht]
 \begin{center}
   \includegraphics{img//cliente-servidor.png}
-  \caption{Esquema Cliente-Servidor}
+  \caption{Esquema Cliente-Servidor\cite{sisp2p}} 
 \end{center}
 \end{figure}
 
 \begin{figure}
 \begin{center}
   \includegraphics{img//p2p.png}
-  \caption{Esquema P2P}
+  \caption{Esquema P2P \cite{sisp2p}} 
 \end{center}
 \end{figure}
 
 \begin{figure}
 \begin{center}
   \includegraphics{img//misto.png}
-  \caption{Esquema Misto}
+  \caption{Esquema Misto \cite{sisp2p}} 
 \end{center}
 \end{figure}
 
