Aplicações finalizadas, imagens, referencias, etc

--- a/document.bib
+++ b/document.bib
@@ -6,6 +6,38 @@
   url = "https://www.rfc-editor.org/rfc/pdfrfc/rfc5694.txt.pdf"
 }
 
+@article{gnutella,
+ title={{Gnutella 0.6 documentation}},
+ author={{Tor Klingberg and Raphael Manfredi}},
+ year="2002",
+ journal = "Network Working Group",
+ url = "http://rfc-gnutella.sourceforge.net/src/rfc-0_6-draft.html"
+}
+
+@Article{gayatriGN,
+	author="Tribhuvan, Gayatri",
+	title="A BRIEF INTRODUCTION AND ANALYSIS OF
+THE GNUTELLA PROTOCOL",
+	howpublished="University of Freiburg
+Masters in Applied Computer Science",
+ 	url="https://pdfs.semanticscholar.org/f0b5/86bda8901c2f3ae399b48239690028f69417.pdf"
+}
+
+@article{pouwelsebit,
+	author = "J.A Powelse and P. Garbacki and D.H.J Epema, H.J. Sips",
+	title = "The bittorrent P2P file-sharing system: measurements and analysis",
+	howpublished = "Department of Computer Science, Delft University of Technology, the Netherlands",
+	url = "http://www.btworld.nl/pdf/iptps2005.pdf"
+}
+
+@article{CohenBIT,
+	author = "Bram Cohen",
+	title = "Incentives Build Robustness in BitTorrent",
+	journal= "Workshop on Economics of Peer-to-Peer Systems, Berkeley, USA",
+	year = "2003",
+	url = "http://www.bittorrent.org/bittorrentecon.pdf"
+}
+
 @Article{Zhang2012,
 author="Zhang, GuoQiang
 and Tang, MingDong
@@ -36,6 +68,21 @@ howpublished="Universidade Federal Fluminense",
 year="2007",
 url="http://www2.ic.uff.br/~otton/graduacao/informaticaI/P2P.pdf"
 }
+
+@misc{howstuffworks,
+author="Tyson, Jeff",
+title={\textit{How the old Napster Worked}},
+howpublished="How Stuff Works",
+url="http://computer.howstuffworks.com/napster1.htm"
+}
+
+@misc{examplesofp2p,
+author="Andrew T. Campbell",
+title={\textit{Examples Peer-to-Peer Applications}},
+howpublished="Departament of Computer Science - Darthmouth College",
+url="http://www.cs.dartmouth.edu/~campbell/cs60/"
+}
+
 
 @inproceedings{schollmeier2001,
 author="Schollmeier, Rüdiger",
